--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,10 @@
 == Contacts
 
 An internal database to keep track of the contacts we have through CORE.
+
+=== Setup
+
+To develop on this project, you'll need to install Ruby, Rails, and MongoDB.
+
+1. Run `bundle install` to install the Ruby gems you need.
+2. To start the local server, run `rails s` and head to `localhost:3000` on your web browser.
